force-app/main/default/objects/Thai_Sell_out_Inventory__c/Thai_Sell_out_Inventory__c.object-meta.xml
<CustomObject>
    <label>Thai Sell out Inventory</label>
    <nameField>
        <displayFormat>SOI-{00000000}</displayFormat>
        <label>Thai Sell out Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thai Sell out Inventorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>