force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/act_amt_rmb__c.field-meta.xml
<CustomField>
    <fullName>act_amt_rmb__c</fullName>
    <label>实际销售金额_人民币</label>
    <length>255</length>
    <type>Text</type>
</CustomField>