force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/act_qty__c.field-meta.xml
<CustomField>
    <fullName>act_qty__c</fullName>
    <label>实际销售数量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>