force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/act_qty_w4__c.field-meta.xml
<CustomField>
    <fullName>act_qty_w4__c</fullName>
    <label>act qty w4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>