force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/ch_store_no__c.field-meta.xml
<CustomField>
    <fullName>ch_store_no__c</fullName>
    <label>渠道门店编码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>