force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/Channel_item__c.field-meta.xml
<CustomField>
    <fullName>Channel_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel item</label>
    <referenceTo>Channel_item__c</referenceTo>
    <relationshipLabel>Thai Sell out Inventorys</relationshipLabel>
    <relationshipName>Thai_Sell_out_Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>