force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/create_dt__c.field-meta.xml
<CustomField>
    <fullName>create_dt__c</fullName>
    <label>创建日期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>