force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/create_dt_date__c.field-meta.xml
<CustomField>
    <fullName>create_dt_date__c</fullName>
    <label>create_dt_date</label>
    <type>Date</type>
</CustomField>