force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/create_week__c.field-meta.xml
<CustomField>
    <fullName>create_week__c</fullName>
    <label>创建周</label>
    <length>255</length>
    <type>Text</type>
</CustomField>