force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/curr__c.field-meta.xml
<CustomField>
    <fullName>curr__c</fullName>
    <label>本位币币种</label>
    <length>255</length>
    <type>Text</type>
</CustomField>