force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/cust_model__c.field-meta.xml
<CustomField>
    <fullName>cust_model__c</fullName>
    <label>客户型号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>