force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/cust_no__c.field-meta.xml
<CustomField>
    <fullName>cust_no__c</fullName>
    <label>渠道编码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>