force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/data_source__c.field-meta.xml
<CustomField>
    <fullName>data_source__c</fullName>
    <label>数据来源（接口/RPA/导入）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>