force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/Days_of_Inventory_w6__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Inventory_w6__c</fullName>
    <label>Days_of_Inventory_w6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>