force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/onln_offln__c.field-meta.xml
<CustomField>
    <fullName>onln_offln__c</fullName>
    <label>上线/线下</label>
    <length>255</length>
    <type>Text</type>
</CustomField>