force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/st_intr__c.field-meta.xml
<CustomField>
    <fullName>st_intr__c</fullName>
    <label>在途库存量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>