force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/stock_on_order__c.field-meta.xml
<CustomField>
    <fullName>stock_on_order__c</fullName>
    <label>订单占用库存数量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>