force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/store_no__c.field-meta.xml
<CustomField>
    <fullName>store_no__c</fullName>
    <label>门店编码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>