force-app/main/default/objects/Thai_Sell_out_Inventory__c/fields/sub__c.field-meta.xml
<CustomField>
    <fullName>sub__c</fullName>
    <label>三级区组</label>
    <length>255</length>
    <type>Text</type>
</CustomField>